# baeloop

./: .env.example  .gitignore  AGENTS.md  README.md  project.md  pyproject.toml
docs/: ARCHITECTURE.md  advisor-examples.md  project-readiness-review.md  two-week-plan.md  week1-mvp-plan.md
reports/: advisor_eval_deterministic.json  advisor_eval_deterministic.md  advisor_eval_holdout_deterministic.json  advisor_eval_holdout_deterministic.md  advisor_eval_holdout_llm_v2.json  advisor_eval_holdout_llm_v2.md  advisor_eval_llm.json  advisor_eval_llm.md  advisor_eval_llm_v2.json  advisor_eval_llm_v2.md  advisor_eval_tool_agent.json  advisor_eval_tool_agent.md  agentlab_broad_full_policy_compare.json  agentlab_broad_full_policy_compare.md  agentlab_challenge_compare.json  agentlab_challenge_compare.md  agentlab_challenge_proposal.json  agentlab_control_full_policy_compare.json  agentlab_control_full_policy_compare.md  agentlab_control_full_policy_llm_proposal.json  agentlab_control_full_policy_proposal.json  agentlab_core_compare.json  agentlab_core_compare.md  agentlab_core_proposal.json  agentlab_grid_coordinate_probe.json  agentlab_grid_coordinate_probe.md  agentlab_hard_budget30_compare.json  agentlab_hard_budget30_compare.md  agentlab_hard_budget30_proposal.json  agentlab_hard_budget30_vs_combined_policy_compare.json  agentlab_hard_budget30_vs_combined_policy_compare.md  agentlab_hard_combined_policy_compare.json  agentlab_hard_combined_policy_compare.md  agentlab_hard_combined_policy_proposal.json  agentlab_hard_combined_vs_terminal_policy_compare.json  (+45 more)
(+85 files in other folders)
