[project]
name = "baeloop"
version = "0.1.0"
description = "Browser agent evaluation and optimization loop."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
benchmark = [
    "agentlab",
    "browsergym-miniwob",
]

[project.scripts]
baeloop = "baeloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/baeloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
